--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8082
 server.servlet.context-path=/lacaAdmin
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -34,8 +34,8 @@ mybatis-plus.configuration.map-underscore-to-camel-case=true
 mybatis-plus.configuration.cache-enabled=true
 
 ##文件上传路径
-upload.file.path=d://uploadFile/
-#upload.file.path=/root/uploadFile/
+#upload.file.path=d://uploadFile/
+upload.file.path=/root/uploadFile/
 upload.file.type=jpeg,jpg,png
 file.staticAccessPath=/uploadFile/**
 #文件访问的路径
